// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t0] artifact created, level 1 reviewers run first then: snapshot [t0]: level 1 active, level 2 awaits 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i1.8739656801d5e77f22.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 1/3)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i1.8739656801d5e77f22.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i1.8739656801d5e77f22.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 1/3)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i1.8739656801d5e77f22.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t1] second attempt, linter uses more budget then: snapshot [t1]: linter 2/2 exhausted, spellcheck 2/3 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 2/3)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 2/3)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t2] third attempt, spellcheck passes (linter already exhausted) then: snapshot [t2]: level 1 terminal, architect unlocked 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r3._.given.by_peer.architect.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted, cached
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r3._.given.by_peer.architect.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t3.5] fifth attempt, architect exhausted (review SKIPPED) then: snapshot [t3.5]: architect exhausted 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: linter, architect
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.vision --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: linter (l1, 2/2)
          │   ├─ exhausted, cached
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
          ├─ r2: spellcheck (l1, 3/3)
          │   ├─ approved, cached
          │   ├─ 0 blockers ✓
          │   ├─ 0 nitpicks ✓
          │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
          └─ r3: architect (l2, 2/2)
              ├─ exhausted, cached
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              └─ review: .reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t3] fourth attempt, architect at budget limit then: snapshot [t3]: architect rejected at limit 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted, cached
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved, cached
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t4] route.drive shows exhaustion status then: snapshot [t4]: drive status with exhaustion 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 2/2)
      │       ├─ exhausted
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
      │
      ├─ please ask a human to either
      │  ├─ approve as-is
      │  │  └─ rhx route.stone.set --stone 1.vision --as approved
      │  │
      │  └─ extend budget (then rerun)
      │     └─ rhx route.guard.budget --for review --add N --stone 1.vision
      │
      └─ once they approve, run
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t5] extend budget for architect then: snapshot [t5]: budget extended 1`] = `
"
🦉 budget extended

🗿 route.guard.budget
   ├─ route = .
   ├─ add = 2
   ├─ peer = architect
   └─ updates
      └─ architect: 2 → 4

"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t6] after budget extension, architect can continue then: snapshot [t6]: architect can continue 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 2/4)
      │       ├─ rejected
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i4.6dddc53e1de2efc1da.r3._.given.by_peer.architect.md
      │
      ├─ please ask a human to either
      │  ├─ approve as-is
      │  │  └─ rhx route.stone.set --stone 1.vision --as approved
      │  │
      │  └─ extend budget (then rerun)
      │     └─ rhx route.guard.budget --for review --add N --peer linter --stone 1.vision
      │
      └─ once they approve, run
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t7] make architect pass then: snapshot [t7]: architect approved, linter still exhausted 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 3/4)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i5.0997a4c5910ffe05d0.r3._.given.by_peer.architect.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: linter
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer linter --stone 1.vision
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.vision --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: linter (l1, 2/2)
          │   ├─ exhausted, cached
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
          ├─ r2: spellcheck (l1, 3/3)
          │   ├─ approved, cached
          │   ├─ 0 blockers ✓
          │   ├─ 0 nitpicks ✓
          │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
          └─ r3: architect (l2, 3/4)
              ├─ approved [TIME]
              ├─ 0 blockers ✓
              ├─ 0 nitpicks ✓
              └─ review: .reviews/peer/1.vision._.review.i5.0997a4c5910ffe05d0.r3._.given.by_peer.architect.md
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t8] route.drive shows need for human approval then: snapshot [t8]: needs approval for exhaustion 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
      │   └─ r3: architect (l2, 3/4)
      │       ├─ approved
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: /tmp/test-fns/rhachet-roles-bhrain.vlad.fix-driver-overruled-even-error/.temp/2026-06-28T22-20-43.020Z.peer-budget-multilevel.5f29f31d/.reviews/peer/1.vision._.review.i5.0997a4c5910ffe05d0.r3._.given.by_peer.architect.md
      │
      ├─ please ask a human to either
      │  ├─ approve as-is
      │  │  └─ rhx route.stone.set --stone 1.vision --as approved
      │  │
      │  └─ extend budget (then rerun)
      │     └─ rhx route.guard.budget --for review --add N --peer linter --stone 1.vision
      │
      └─ once they approve, run
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t9] human approves then: snapshot [t9]: approved 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ ✓ approved
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t10] pass after human approval then: snapshot [t10]: journey complete 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │
   ├─ r3: architect (l2, 3/4)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.vision._.review.i5.0997a4c5910ffe05d0.r3._.given.by_peer.architect.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: linter (l1, 2/2)
   │  │   │   ├─ exhausted, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .reviews/peer/1.vision._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.linter.md
   │  │   ├─ r2: spellcheck (l1, 3/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .reviews/peer/1.vision._.review.i3.457fd5ef46e053a35e.r2._.given.by_peer.spellcheck.md
   │  │   └─ r3: architect (l2, 3/4)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.vision._.review.i5.0997a4c5910ffe05d0.r3._.given.by_peer.architect.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
